# itugl-rs

./: Cargo.toml  README.md
examples/: exercise0.rs  exercise1.rs
examples/exercise0/: main.rs
examples/exercise1/: frag.frag  main.rs  vert.vert
examples/exercise2/: frag.frag  main.rs  vert.vert
examples/exercise3/: main.rs
examples/skeleton/: main.rs
src/: application.rs  core.rs  error.rs  geometry.rs  lib.rs  shader.rs
src/application/: application.rs  window.rs
src/core/: buffer_object.rs  color.rs  data.rs  object.rs
src/geometry/: drawcall.rs  element_buffer_object.rs  mesh.rs  vertex_array_object.rs  vertex_attribute.rs  vertex_buffer_object.rs
