[package]
name = "itugl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glam = "0.30.0"
glfw = "0.59.0"
log = "0.4.20"
noise = "0.9.0"
rand = "0.9.0"


[lints.rust]
# unsafe_code = "deny"
keyword_idents = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
non_ascii_idents = "warn"
noop_method_call = "warn"
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
# rust_2018_idioms = "warn"
#missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(debug_assertion)'] }


[lints.clippy]

all = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
#restriction = { level = "warn", priority = -1 }
cargo_common_metadata = "allow"
# pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
missing_docs_in_private_items = "allow"
module-name-repetitions = "allow"
needless_pass_by_value = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
missing_errors_doc = "allow"
multiple_crate_versions = "allow"
suboptimal_flops = "allow"
